[gd_scene load_steps=3 format=3 uid="uid://ciqidfoioy0ml"]

[ext_resource type="Script" path="res://Script/main_menu.gd" id="1_main_menu"]
[ext_resource type="AudioStream" uid="uid://dcgxyban2hhr6" path="res://Music/bgm0.ogg" id="2_bgm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 230.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "木偶的面具"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -70.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 32
text = "开始游戏"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 32
text = "游戏帮助"

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bgm")
autoplay = true
bus = &"Master"
